[project]
name = "mcp-email-server"
version = "0.1.0"
description = "MCP server for email operations (POP3/SMTP with TLS)"
requires-python = ">=3.12"
dependencies = [
    "mcp",
    "python-dotenv",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
# Optional: Add any specific uv configurations here if needed
