[project]
name = "email-mcp-server"
version = "0.1.0"
description = "MCP server for email operations (POP3/SMTP with TLS)"
requires-python = ">=3.12"
dependencies = [
    "mcp",
    "python-dotenv",
]

[project.scripts]
email-mcp-server = "main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]
